layout bug

--- a/source/css/index.css
+++ b/source/css/index.css
@@ -404,6 +404,7 @@ margin-top: 50px;
 	transition: opacity 0.5s ease-in-out;
   position: fixed;
   left: 50%;
+  transform: translate(-50%, 0);
   text-align: center;
 
 }
